# Radar-SR-Design

./: .gitignore  App.js  README.md  Raspberry pi code no severity final  package-lock.json  requirements.txt  setup_instrucitons
radar_sdk/: CMakeLists.txt
radar_sdk/cmake/: TargetPlatform.cmake  build_settings.cmake  c_flags_overrides.cmake  cxx_flags_overrides.cmake  macros.cmake  version.cmake
radar_sdk/doc/: documentation.html
radar_sdk/doc/html/: 2_d_m_t_i_8h.html  2_d_m_t_i_8h.js  2_d_m_t_i_8h__dep__incl.map  2_d_m_t_i_8h__dep__incl.md5  2_d_m_t_i_8h__incl.map  2_d_m_t_i_8h__incl.md5  _advanced_motion_sensing_8h.html  _advanced_motion_sensing_8h.js  _advanced_motion_sensing_8h__incl.map  _advanced_motion_sensing_8h__incl.md5  _algo_8h.html  _algo_8h__incl.map  _algo_8h__incl.md5  _angle_capon_8h.html  _angle_capon_8h.js  _angle_capon_8h__dep__incl.map  _angle_capon_8h__dep__incl.md5  _angle_capon_8h__incl.map  _angle_capon_8h__incl.md5  _angle_monopulse_8h.html  _angle_monopulse_8h.js  _angle_monopulse_8h__dep__incl.map  _angle_monopulse_8h__dep__incl.md5  _angle_monopulse_8h__incl.map  _angle_monopulse_8h__incl.md5  _avian_8h.html  _avian_8h__incl.map  _avian_8h__incl.md5  _base_8h.html  _base_8h__incl.map  _base_8h__incl.md5  _complex_8h.html  _complex_8h.js  _complex_8h__dep__incl.map  _complex_8h__dep__incl.md5  _complex_8h__incl.map  _complex_8h__incl.md5  _cube_8h.html  _cube_8h.js  _cube_8h__dep__incl.map  (+804 more)
radar_sdk/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  enums_0.js  enumvalues_0.js  (+73 more)
radar_sdk/examples/matlab/BGT60TR13C/: presence_detection.m
radar_sdk/examples/matlab/BGT60UTR11AIP/: presence_detection.m
radar_sdk/examples/py/BGT60ATR24C/: presence_detection.py  range_angle_map.py  range_doppler_map.py
radar_sdk/examples/py/BGT60TR13C/: range_angle_map.py  range_doppler_map.py  raw_data.py
radar_sdk/examples/py/BGT60UTR11AIP/: continuous_wave.py  distance_fft.py  raw_data.py  raw_data_register_list.py  static_distance.py  static_distance_gui.py
radar_sdk/libs/macos/: liblib_avian.dylib  libradar_sdk.dylib  libsdk_advanced_motion_sensing.dylib  libsdk_algo.dylib  libsdk_avian.dylib  libsdk_base.dylib  libsdk_cw.dylib  libsdk_fmcw.dylib  libsdk_ltr11.dylib  libsdk_mimose.dylib  libsdk_motionangle.dylib  libsdk_presence_sensing.dylib  libsdk_radar.dylib  libsdk_radar_segmentation.dylib  libstrata_shared.dylib
radar_sdk/libs/win32_x64/: CMSISDSP.lib  DeviceControlM.lib  DeviceControlM.mexw64  DeviceControlM_Mimose.lib  DeviceControlM_Mimose.mexw64  algo_motionangle.lib  argparse.lib  lib_avian.lib  lib_smartar.lib  radar_sdk.lib  sdk_advanced_motion_sensing.lib  sdk_algo.lib  sdk_avian.lib  sdk_base.lib  sdk_cw.lib  sdk_fmcw.lib  sdk_ltr11.lib  sdk_mimose.lib  sdk_motionangle.lib  sdk_presence_sensing.lib  sdk_radar.lib  sdk_radar_device_common.lib  sdk_radar_segmentation.lib  strata_shared.lib
radar_sdk/python_wheels/: ifxradarsdk-3.5.0+8c595dbb-py3-none-macosx_10_14_universal2.whl  ifxradarsdk-3.5.0+8c595dbb-py3-none-win_amd64.whl
radar_sdk/sdk/c/: CMakeLists.txt  dummy.c
radar_sdk/sdk/c/ifxAdvancedMotionSensing/: AdvancedMotionSensing.h
radar_sdk/sdk/c/ifxAlgo/: 2DMTI.c  2DMTI.h  Algo.h  CMakeLists.txt  DBSCAN.c  DBSCAN.h  FFT.c  FFT.h  MTI.c  MTI.h  OSCFAR.c  OSCFAR.h  PreprocessedFFT.c  PreprocessedFFT.h  Signal.c  Signal.h  Window.c  Window.h
radar_sdk/sdk/c/ifxAvian/: Avian.h  CMakeLists.txt  DeviceConfig.cpp  DeviceConfig.h  DeviceControl.cpp  DeviceControl.h  Metrics.cpp  Metrics.h
radar_sdk/sdk/c/ifxBase/: Base.h  CMakeLists.txt  Complex.c  Complex.h  Cube.c  Cube.h  Defines.h  Error.c  Error.h  Exception.hpp  FunctionWrapper.hpp  Helper.hpp  LA.c  LA.h  List.cpp  List.h  Log.c  Log.h  Math.c  Math.h  Matrix.c  Matrix.h  Mda.cpp  Mda.h  Mem.c  Mem.h  Types.h  Util.c  Utils.hpp  Uuid.c  Uuid.h  Vector.c  Vector.h  Version.c  Version.h
radar_sdk/sdk/c/ifxComPort/: CMakeLists.txt  COMPort.h  COMPort_Unix.c  COMPort_Windows.c  ComPort.cpp
radar_sdk/sdk/c/ifxCw/: CMakeLists.txt  DeviceCw.cpp  DeviceCw.h  DeviceCw.hpp  DeviceCwBase.cpp  DeviceCwBase.hpp  DeviceCwTypes.c  DeviceCwTypes.h
radar_sdk/sdk/c/ifxFmcw/: CMakeLists.txt  DeviceFmcw.cpp  DeviceFmcw.h  DeviceFmcw.hpp  DeviceFmcwBase.cpp  DeviceFmcwBase.hpp  DeviceFmcwCWrapper.cpp  DeviceFmcwTypes.c  DeviceFmcwTypes.h  MetricsFmcw.cpp  MetricsFmcw.h
radar_sdk/sdk/c/ifxLtr11/: CMakeLists.txt  DeviceLtr11.cpp  DeviceLtr11.h  DeviceLtr11Base.cpp  DeviceLtr11Base.hpp  DeviceLtr11Dummy.cpp  DeviceLtr11Dummy.hpp  DeviceLtr11Impl.cpp  DeviceLtr11Impl.hpp  DeviceLtr11RegisterConfigurator.cpp  DeviceLtr11RegisterConfigurator.hpp  DeviceLtr11Types.h
radar_sdk/sdk/c/ifxMimose/: CMakeLists.txt  DeviceMimose.cpp  DeviceMimose.h  DeviceMimoseBase.cpp  DeviceMimoseBase.hpp  DeviceMimoseConstants.hpp  DeviceMimoseDummy.cpp  DeviceMimoseDummy.hpp  DeviceMimoseImpl.cpp  DeviceMimoseImpl.hpp  DeviceMimoseRegisterConfigurator.cpp  DeviceMimoseRegisterConfigurator.hpp  DeviceMimoseTypes.h  atr22_regmap.json  registers_BGT24ATR22.hpp
radar_sdk/sdk/c/ifxMotionAngle/: MotionAngle.h
radar_sdk/sdk/c/ifxRadar/: AngleCapon.c  AngleCapon.h  AngleMonopulse.c  AngleMonopulse.h  CMakeLists.txt  DBF.c  DBF.h  DeInterleaver.cpp  DeInterleaver.hpp  DopplerSpectrogram.c  DopplerSpectrogram.h  PeakSearch.c  PeakSearch.h  Radar.h  RangeAngleImage.c  RangeAngleImage.h  RangeDopplerMap.c  RangeDopplerMap.h  RangeSpectrum.c  RangeSpectrum.h  SpectrumAxis.h  (+1 more)
radar_sdk/tools/bgt60-configurator-cli/: CMakeLists.txt  bgt60-configurator-cli.cpp  presence.json  segmentation.json  segmentation_1ghz.json
radar_sdk/tools/ltr11-recording-matlab-parser/: README.md  recording_parser_script_BGT60LTR11.m
(+200 files in other folders)
