[project]

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
version = "@SDK_WHEEL_VERSION@"

# A general reference for all the fields available in `[project]` can be found at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install sampleproject
#
# And where it will live on PyPI: https://pypi.org/project/sampleproject/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "ifxradarsdk"  # Required

# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "Python module for Infineon's 60GHz Avian radar sensors. Built from commit: @SDK_COMMIT_HASH@" # Optional

# Each entry is a string giving a single classification value for the distribution.
# Classifiers are described in PEP 301, and the Python Package Index publishes
# a dynamic list of currently defined classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

# Specify which Python versions you support. In contrast to the
# 'Programming Language' classifiers above, 'pip install' will check this
# and refuse to install the project if the version does not match. See
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.8"

# This is either text indicating the license for the distribution, or a file
# that contains the license
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = {file = "LICENSE.txt"}

# This field adds keywords for your project which will appear on the
# project page. What does your project relate to?
#
# Note that this is a list of additional keywords,
# to be used to assist searching for the distribution in a
# larger catalog.
keywords= ["infineon", "radar", "sensor", "avian", "bgt60tr13c", "bgt60atr24", "bgt60utr11aip", "bgt60utr13"]

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
    {name = "Infineon", email = "rdk@infineon.com"}
]
maintainers = []

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "numpy"
]

# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]  # Optional
"Homepage" = "https://www.infineon.com/60ghz"
"Bug Reports" = "https://community.infineon.com/t5/Radar-sensor/bd-p/Radarsensor"
"Source" = "https://softwaretools.infineon.com/tools/com.ifx.tb.tool.ifxradarsdk"

[tool.setuptools]
platforms = ["Windows", "Linux", "MacOS"]

[tool.setuptools.package-data]
# If there are data files included in your packages that need to be
# installed, specify them here.
ifxradarsdk = ["lib/*.dll", "lib/*.so", "lib/*.dylib"]

[build-system]
# These are requirements for building this project
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
